# ld_hc_challenge

./: alembic.ini  main.py  pyproject.toml  utils.py
alembic/: env.py
alembic/versions/: 432d6607b0b7_update_user_table.py  91a362322108_initial_migration.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  items.py  products.py
app/core/: config.py  database.py  security.py
app/models/: item.py  product.py  user.py
app/schemas/: auth.py  item.py  product.py  user.py
app/services/: item_service.py  product_service.py  user_service.py
data/: items.json  products.json  users.json
scripts/: manage_db.py
