[project]
name = "hc-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.2",
    "pyjwt>=2.10.1",
    "pydantic-settings>=2.8.1",
    "passlib>=1.7.4",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.20",
    "pre-commit>=4.2.0",
    "bcrypt>=4.3.0",
    "httpx>=0.28.1",
    "cryptography>=44.0.2",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "greenlet>=3.2.1",
]
